Fix style for collapse header

--- a/ui/src/styles/globals.css
+++ b/ui/src/styles/globals.css
@@ -349,8 +349,6 @@ z-index: 0;
 
 .prompt-chat-options-container.collapsed {
   padding-bottom: 0px;
-  padding-top: 0px;
-  padding-right: 0px;
   width: 100%;
   background-color: inherit !important;
 }
@@ -361,7 +359,11 @@ z-index: 0;
 
 .prompt-chat-options-container .ant-collapse-header {
   color: #666666 !important;
-  padding: 12px 0 !important;
+  padding: 5px 0px !important;
+}
+
+.prompt-chat-options-container.ant-collapse {
+  padding-top: 4px;
 }
 
 .title-for-collapsed-panel.hide {
@@ -606,7 +608,6 @@ z-index: 0;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  font-size: 14px;
 }
 
 .drawer-header {
